--- a/Programy/templates/exercises/index.html
+++ b/Programy/templates/exercises/index.html
@@ -3,23 +3,23 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>XTworks</title>
-    <link rel="stylesheet" href="./styles/header.css">
-    <link rel="stylesheet" href="./styles/style.css">
-    <link rel="icon" href="./images/logo_new.svg">
+    <title>Subnetron</title>
+    <link rel="stylesheet" href="./static/exercises/styles/header.css">
+    <link rel="stylesheet" href="./static/exercises/styles/style.css">
+    <link rel="icon" href="./static/exercises/images/logo_new.svg">
 </head>
 <body>
     <nav id="header">
-        <a id="headerLogo" href="../Homepage/" style="text-decoration: none;"><img src="./images/logo_new.svg" height="50px"><span>works</span></a>
+        <a id="headerLogo" href="./" style="text-decoration: none;"><img src="./static/shared/images/logo.svg" height="50px"><span>works</span></a>
         <div id="navbarLinks">
             <div id="navbarMainLinks">
                 <a class="headerLinks" href="" style="text-decoration: none;">Blog</a>
-                <a class="headerLinks" href="../vyber_uloh/" target="_self" style="text-decoration: none;">Úlohy</a>
-                <a class="headerLinks" href="../kalkulacka/" target="_self" style="text-decoration: none;">Kalkulačka</a>
+                <a class="headerLinks" href="./exercises" target="_self" style="text-decoration: none;">Úlohy</a>
+                <a class="headerLinks" href="./calculator" target="_self" style="text-decoration: none;">Kalkulačka</a>
             </div>
             
-            <a id="headerProject" href="../Homepage/#aboutProjectSection" style="text-decoration: none;">O projektu</a>
-            <img id="headerLanguage" src="./images/czech_flag.png">
+            <a id="headerProject" href="./#aboutProjectSection" style="text-decoration: none;">O projektu</a>
+            <img id="headerLanguage" src="./static/shared/images/czech_flag.png">
             
         </div>
     </nav>
@@ -33,7 +33,7 @@
             </p>
             
             <div id="ip-section-button">
-                <a id="ip-section-button-self" href="../ip_adresace/" target="_self" style="text-decoration: none;">Začít počítat</a>
+                <a id="ip-section-button-self" href="./exercises/ip" target="_self" style="text-decoration: none;">Začít počítat</a>
             </div>
         </div>
         
