--- a/Programy/templates/homepage/index.html
+++ b/Programy/templates/homepage/index.html
@@ -5,24 +5,24 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Subnetron</title>
-    <link rel="stylesheet" href="./static/Homepage/styles/header.css">
-    <link rel="stylesheet" href="./static/Homepage/styles/style.css">
-    <link rel="stylesheet" href="./static/Homepage/styles/footer.css">
-    <link rel="icon" href="./static/Homepage/images/logo_new.svg">
+    <link rel="stylesheet" href="./static/homepage/styles/header.css">
+    <link rel="stylesheet" href="./static/homepage/styles/style.css">
+    <link rel="stylesheet" href="./static/homepage/styles/footer.css">
+    <link rel="icon" href="./static/homepage/images/logo_new.svg">
 </head>
 
 <body>
     <div id="homepage">
         <nav id="header">
-            <a id="headerLogo" href="../Homepage/" style="text-decoration: none;"><img src="./static/Homepage/images/logo_new.svg" height="50px"><span>works</span></a>
+            <a id="headerLogo" href="./" style="text-decoration: none;"><img src="./static/shared/images/logo.svg" height="50px"><span>works</span></a>
             <div id="navbarLinks">
                 <div id="navbarMainLinks">
                     <a class="headerLinks" href="" target="_self" style="text-decoration: none;">Blog</a>
-                    <a class="headerLinks" href="../vyber_uloh/" target="_self" style="text-decoration: none;">Úlohy</a>
-                    <a class="headerLinks" href="../kalkulacka/" target="_self" style="text-decoration: none;">Kalkulačka</a>
+                    <a class="headerLinks" href="./exercises" target="_self" style="text-decoration: none;">Úlohy</a>
+                    <a class="headerLinks" href="./calculator" target="_self" style="text-decoration: none;">Kalkulačka</a>
                 </div>
                 <a id="headerProject" href="#aboutProjectSection" style="text-decoration: none;">O projektu</a>
-                <img id="headerLanguage" src="./static/Homepage/images/czech_flag.png">
+                <img id="headerLanguage" src="./static/shared/images/czech_flag.png">
             </div>
         </nav>
         <div id="title">
@@ -42,7 +42,7 @@
                     Vyvinuli jsme pro tebe skvělou<br>
                     kalkulačku, s kterou ti to půjde<br>
                     jedna dvě!</p>
-                <a class="sectionButton" id="firstSectionButton" href="../kalkulacka/" target="_self" style="text-decoration: none;">Kalkulačka</a>
+                <a class="sectionButton" id="firstSectionButton" href="./calculator" target="_self" style="text-decoration: none;">Kalkulačka</a>
             </div>
             <div class="section sectionAnimation">
                 <p class="sectionTitle" id="secondSectionTitle">Již brzy spouštíme<br>
@@ -58,7 +58,7 @@
                     Nevíš, co je to VLSM/FLSM?<br>
                     Nevěš hlavu, připravili jsme<br>
                     pro tebe řadu úloh k procvičení!</div>
-                <a class="sectionButton" id="thirdSectionButton" href="../vyber_uloh/" target="_self" style="text-decoration: none;">Začít počítat</a>
+                <a class="sectionButton" id="thirdSectionButton" href="./exercises" target="_self" style="text-decoration: none;">Začít počítat</a>
             </div>
         </div>
     
@@ -91,22 +91,22 @@
     </div>
     <div id="footerMain">
         <div id="footer">
-            <a id="footerLogo" href="" style="text-decoration: none;"><img src="./static/Homepage/images/logo_new.svg" height="50px"><span>works</span></a>
+            <a id="footerLogo" href="" style="text-decoration: none;"><img src="./static/shared/images/logo.svg" height="50px"><span>works</span></a>
             <div id="footerLinks">
                 <a class="footerLink" target="_blank" href="" style="text-decoration: none;">Blog</a>
-                <a class="footerLink" target="_blank" href="" style="text-decoration: none;">Úlohy</a>
-                <a class="footerLink" target="_blank" href="" style="text-decoration: none;">Kalkulačka</a>
+                <a class="footerLink" target="_blank" href="./exercises" style="text-decoration: none;">Úlohy</a>
+                <a class="footerLink" target="_blank" href="./calculator" style="text-decoration: none;">Kalkulačka</a>
             </div>
             <div id="footerImages">
-                <a class="footerImage" href="" style="text-decoration: none;"><img src="./static/Homepage/images/discord-logo.svg" height="50px"></a>
-                <a class="footerImage" href="" style="text-decoration: none;"><img src="./static/Homepage/images/github-logo.svg" height="60px"></a>
+                <a class="footerImage" href="" style="text-decoration: none;"><img src="./static/homepage/images/discord-logo.svg" height="50px"></a>
+                <a class="footerImage" href="" style="text-decoration: none;"><img src="./static/homepage/images/github-logo.svg" height="60px"></a>
             </div> 
         </div>
     </div>
     <div id="footerBottomsMain">
         <div id="footerBottoms">
             <div id="footerBottomLeft"></div>
-            <div id="footerBottomDate" align="center">©2023</div>
+            <div id="footerBottomDate" align="center">©2024</div>
             <div id="footerBottomRight"></div>
         </div>
     </div>
