--- a/Programy/templates/result/index.html
+++ b/Programy/templates/result/index.html
@@ -3,23 +3,23 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>XTworks</title>
-    <link rel="icon" href="./images/logo_new.svg">
-    <link rel="stylesheet" href="./styles/style.css">
-    <link rel="stylesheet" href="./styles/header.css">
+    <title>Subnetron</title>
+    <link rel="icon" href="../static/shared/images/logo.svg">
+    <link rel="stylesheet" href="../static/result/styles/style.css">
+    <link rel="stylesheet" href="../static/result/styles/header.css">
 </head>
 <body>
     <nav id="header">
-        <a id="headerLogo" href="../Homepage/" style="text-decoration: none;"><img src="./images/logo_new.svg" height="50px"><span>works</span></a>
+        <a id="headerLogo" href="../" style="text-decoration: none;"><img src="../static/shared/images/logo.svg" height="50px"><span>works</span></a>
         <div id="navbarLinks">
             <div id="navbarMainLinks">
                 <a class="headerLinks" href="" target="" style="text-decoration: none;">Blog</a>
-                <a class="headerLinks" href="../vyber_uloh/" target="_self" style="text-decoration: none;">Úlohy</a>
-                <a class="headerLinks" href="../kalkulacka/" target="_self" style="text-decoration: none;">Kalkulačka</a>
+                <a class="headerLinks" href="../exercises" target="_self" style="text-decoration: none;">Úlohy</a>
+                <a class="headerLinks" href="../calculator" target="_self" style="text-decoration: none;">Kalkulačka</a>
             </div>
             
-            <a id="headerProject" href="../Homepage/#aboutProjectSection" target="_self" style="text-decoration: none;">O projektu</a>
-            <img id="headerLanguage" src="./images/czech_flag.png">
+            <a id="headerProject" href="../#aboutProjectSection" target="_self" style="text-decoration: none;">O projektu</a>
+            <img id="headerLanguage" src="../static/shared/images/czech_flag.png">
             
         </div>
     </nav>
@@ -30,30 +30,31 @@
             <div id="result-indicators">
                 <div class="result-indicator">
                     <label class="result-identifier">Síťová adresa</label>
-                    <p class="result">{{vysledek}}</p>
+                    <p class="result">{{nAddr}}</p>
                 </div>
                 <div class="result-indicator">
                     <label class="result-identifier">První host</label>
-                    <p class="result">{{vysledek}}</p>
+                    <p class="result">{{fHost}}</p>
                 </div>
                 <div class="result-indicator">
                     <label class="result-identifier">Poslední host</label>
-                    <p class="result">{{vysledek}}</p>
+                    <p class="result">{{lHost}}</p>
                 </div>
                 <div class="result-indicator">
                     <label class="result-identifier">Broadcastová adresa</label>
-                    <p class="result">{{vysledek}}</p>
+                    <p class="result">{{bAddr}}</p>
                 </div>
                 <div class="result-indicator">
                     <label class="result-identifier">Typ adresy</label>
-                    <p class="result">{{vysledek}}</p>
+                    <p class="result">{{aType}}</p>
                 </div>
                 <div class="result-indicator">
                     <label class="result-identifier">Třída adresy</label>
-                    <p class="result">{{vysledek}}</p>
+                    <p class="result">{{aClass}}</p>
                 </div>
+                
                 <div id="result-button">
-                    <a href="../ip_adresace/" tareget="_self" style="text-decoration: none;" id="result-button-text">Počítat dál</a>
+                    <a href="../calculator" tareget="_self" style="text-decoration: none;" id="result-button-text">Počítat dál</a>
                 </div>
             </div>
         </div>
