--- a/Programy/static/calculator/styles/style.css
+++ b/Programy/static/calculator/styles/style.css
@@ -21,7 +21,7 @@ body {
 
     display: flex;
     flex-direction: column;
-    gap: 20px;
+    gap: 50px;
     width: 480px;
     height: 330px;
 
@@ -35,6 +35,7 @@ body {
     
     margin-left: 57px;
     margin-top: 45px;
+    margin-bottom: 0;
 
     font-family: Urbanist;
     font-size: 36px;
@@ -44,21 +45,53 @@ body {
     letter-spacing: 0.5px; 
 }
 
-#firstCalculatorInput {
+#CalculatorInputSection {
 
     display: flex;
     justify-content: center;
     align-items: center;
-    gap: 132px;
+    gap: 50px;
 }
 
-input {
+#inputsSection {
+
+    display: flex;
+    flex-direction: row;
+    gap: 20px;
+}
+
+
+#ip-input {
 
     text-align: center;
     border-radius: 5px;
     background: #FFF; 
     height: 34px;
     width: 197px;
+
+    outline: 0;
+    border: 1px solid #000;
+}
+
+
+#slash {
+
+    margin: 0;
+    font-family: Urbanist;
+    font-size: 25px;
+    font-style: normal;
+    font-weight: 600;
+    line-height: normal;
+    letter-spacing: 0.5px;
+}
+
+#mask-input {
+
+    text-align: center;
+    border-radius: 5px;
+    background: #FFF; 
+    height: 34px;
+    width: 34px;
 
     outline: 0;
     border: 1px solid #000;
@@ -86,13 +119,6 @@ input::placeholder {
     letter-spacing: 0.5px; 
 }
 
-#secondCalculatorInput {
-
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    gap: 122px;
-}
 
 #buttonSection {
 
